[gd_scene load_steps=12 format=2]

[ext_resource path="res://play/return_to_title.gd" type="Script" id=1]
[ext_resource path="res://play/ggMap.png" type="Texture" id=2]
[ext_resource path="res://play/LevelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://play/Green Button 2.png" type="Texture" id=4]
[ext_resource path="res://play/Red Button.png" type="Texture" id=5]
[ext_resource path="res://title_screen/troll.png" type="Texture" id=6]
[ext_resource path="res://title_screen/fonts/montserrat25.tres" type="DynamicFont" id=7]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/fun-on-the-farm.wav" type="AudioStream" id=9]
[ext_resource path="res://play/AudioStreamPlayer.gd" type="Script" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 41.0007, 526.248, 6.49031, 23.3651, -6.49031, -23.3651, 224.677, 467.835, -36.3457, -12.9806, 36.3457, 12.9806, 301.911, 363.99, -74.6386, -70.7444, 74.6386, 70.7444, 438.857, 403.581, 0, 0, 0, 0, 558.928, 418.509, 43.4851, -4.54322, -43.4851, 4.54322, 516.092, 314.664, -64.9031, 62.956, 64.9031, -62.956, 198.715, 162.141 )
}

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
tutorial_panel_path = NodePath("Panel")
tutorial_bg_path = NodePath("Tutorial")
character_name_path = NodePath("Panel/Columns/Name")
charater_image_path = NodePath("CharacterImage")
dialogue_text_path = NodePath("Panel/Columns/Text")
next_button_path = NodePath("Panel/Columns/NextBtn")
done_button_path = NodePath("Panel/Columns/DoneBtn")

[node name="Map" type="TextureRect" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.881531
margin_top = 0.647003
margin_right = 0.881592
margin_bottom = 0.646973
texture = ExtResource( 2 )
stretch_mode = 1

[node name="LabelingGameButton" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 51.7669, 530.046 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
dialogue_file_path = "res://Tutorials/test_tutorial.json"
game_to_load = "res://Minigames/LabelingGame/LabelingGame.tscn"
unlocked = true
playTutorial = true
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="FallingFoodGame" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 304.821, 360.487 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
dialogue_file_path = "res://Tutorials/FallingFood_tutorial.json"
game_to_load = "res://Minigames/FallingFood/Main_FF.tscn"
unlocked = true
playTutorial = true
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="SoccerGameButton" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 558.089, 415.993 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
dialogue_file_path = "res://Tutorials/Soccer_Game_tutorial.json"
game_to_load = "res://Minigames/SoccerGame/soccer_scene.tscn"
unlocked = true
playTutorial = true
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="LevelButton4" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 197.09, 161.536 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="LevelButton5" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 592.594, 159.353 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="LevelButton6" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 809.118, 479.353 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="LevelButton7" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 769.118, 169.353 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="LevelButton8" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 969.118, 109.353 )
scale = Vector2( 0.7, 0.7 )
map_path = NodePath("../..")
unlocked_button = ExtResource( 4 )
locked_button = ExtResource( 5 )

[node name="Path2D" type="Path2D" parent="Map"]
editor/display_folded = true
visible = false
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Map/Path2D"]
position = Vector2( 41.0007, 526.248 )
rotation = -0.186197

[node name="troll" type="Sprite" parent="Map/Path2D/PathFollow2D"]
position = Vector2( 12.1936, -23.6281 )
rotation = 0.186167
scale = Vector2( 1.13026, 1.05442 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.834
margin_top = -70.8344
margin_right = 99.1657
margin_bottom = -30.8344
custom_fonts/font = ExtResource( 7 )
text = "Back to Title"

[node name="FadeIn" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Tutorial" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1

[node name="CharacterImage" type="TextureRect" parent="."]
visible = false
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -325.0
margin_right = 150.0
margin_bottom = -180.0

[node name="Panel" type="Panel" parent="."]
editor/display_folded = true
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0

[node name="Columns" type="HBoxContainer" parent="Panel"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Name" type="Label" parent="Panel/Columns"]
margin_right = 38.0
margin_bottom = 160.0
size_flags_vertical = 5
text = "Name"

[node name="Text" type="Label" parent="Panel/Columns"]
margin_left = 42.0
margin_right = 880.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Dialog"
align = 1
valign = 1

[node name="NextBtn" type="Button" parent="Panel/Columns"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 0
text = "Next"

[node name="DoneBtn" type="Button" parent="Panel/Columns"]
visible = false
margin_left = 884.0
margin_right = 984.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_vertical = 0
text = "Done"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
script = ExtResource( 10 )
[connection signal="pressed" from="Button" to="." method="_on_BackButton_pressed"]
[connection signal="fadeFinished" from="FadeIn" to="." method="_on_FadeIn_fadeFinished"]
[connection signal="pressed" from="Panel/Columns/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="Panel/Columns/DoneBtn" to="." method="_on_DoneBtn_pressed"]
